# mock-feedback

./: .env.tauri  .gitignore  .npmrc  .prettierignore  CLAUDE.md  LICENSE  PLAN.md  README.md  eslint.config.js  index.html  lighthouserc.cjs  package-lock.json  package.json  vercel.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
public/: sw-killswitch.js
public/audio/: downsample-worklet.js
scripts/: check-apple-touch-icon.mjs  check-no-tauri-in-web-bundle.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  secrets.rs
src-tauri/src/commands/: openai.rs
src-tauri/src/openai/: client.rs
src/components/: ApiKeyGate.tsx  ErrorBoundary.tsx  Layout.tsx  SessionCard.tsx  SettingsModal.tsx  StartModal.tsx
src/constants/: audio.ts  copy.ts  feedback.ts  home.ts  interview.ts  openai.ts  prompts.test.ts  prompts.ts  session.ts  topics.test.ts  topics.ts
src/db/: apiKey.ts  index.ts  mockData.ts  mockDataExtra.ts  seed.ts
src/hooks/: ApiKeyContext.tsx  apiKeyState.ts  useApiKey.ts  useSessions.ts
src/lib/: analytics.test.ts  analytics.ts  detectDownloadTarget.test.ts  detectDownloadTarget.ts  detectPlatform.test.ts  detectPlatform.ts  githubLatestRelease.test.ts  githubLatestRelease.ts  installPrompt.test.ts  installPrompt.ts  micCheck.ts  micError.test.ts  micError.ts  perf.ts  retry.test.ts  (+11 more)
(+140 files in other folders)
