[package]
name = "voiceround"
version = "0.1.0"
description = "AI-powered mock interviewer for technical interview practice"
authors = ["rajat-mehra05"]
edition = "2021"

[lib]
name = "voiceround_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
# `sync-secret-service` pulls in libsecret at build time on Linux. Drop it
# if targeting macOS/Windows only.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
